# investing-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.dev.toml.gpg  config.prod.toml.gpg  decrypt-config.sh  diesel.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.qual.yml  docker-compose.yml
.github/workflows/: deploy.yml  main.yml
migrations/2023-06-06-063546_create_user/: down.sql  up.sql
migrations/2023-09-15-151810_create_report_data/: down.sql  up.sql
migrations/2023-11-01-201957_add_created_at/: down.sql  up.sql
migrations/2023-12-05-082730_add_broker_type_to_report/: down.sql  up.sql
src/: main.rs  settings.rs
src/auth/: model.rs  repository.rs  routes.rs  service.rs
src/business/: mod.rs  model.rs
src/business/fiscal_transaction/: model.rs  repository.rs  resource.rs
src/business/portfolio/: mod.rs  model.rs  repository.rs  resource.rs  security.rs
src/business/report/: mod.rs  model.rs  repository.rs  resource.rs  service.rs
src/business/report/exante/: from.rs  mod.rs  model.rs  parse.rs
src/business/report/freedomfinance/: from.rs  model.rs  parse.rs
src/business/trade_operation/: model.rs  repository.rs  resource.rs
src/business/user_transaction/: from.rs  mod.rs  resource.rs  service.rs
src/database/: mod.rs  schema.rs
src/datasource/diesel/: enums.rs  mod.rs  schema.rs
src/datasource/diesel/model/: auth.rs  report.rs
src/datasource/diesel/repository/: auth.rs  mod.rs
src/portfolio/: model.rs  repository.rs  resource.rs
src/util/: serde.rs
src/web/: errors.rs  mod.rs
src/web/graphql/: errors.rs  mod.rs
src/web/model/: auth.rs  graphql.rs  mod.rs
src/web/routes/: auth.rs  graphql.rs
src/web/service/: auth.rs
static/: auth.html  callback.html
testdata/: exante_empty_report.csv  exante_small_report.csv  freedomfinance_report.json
