[package]
name = "investing-backend-rs"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
async-graphql = { version = "6.0.11", features = ["log", "tracing", "uuid", "bigdecimal", "tokio", "unblock"] }
async-graphql-axum = "6.0.7"
axum = { version = "0.6.20", features = ["headers", "tracing"] }
axum-server = { version = "0.5.1" }
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
config = { version = "0.13.3", features = ["toml"] }
csv = "1.3.0"
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
jsonwebtoken-google = "0.1.6"
passwords = "3.1.16"
r2d2 = "0.8.10"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio-comp"] }
reqwest = { version = "0.11.22", features = ["json", "native-tls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-aux = "4.2.0"
serde-enum-str = "0.4.0"
serde_json = "1.0.96"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["compat", "futures-util"] }
tower-http = { version = "0.4.4", features = ["fs","cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
