[package]
name = "investing-backend-rs"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
async-graphql = { version = "7.0.1", features = ["log", "tracing", "uuid", "tokio", "decimal", "unblock", "chrono"] }
async-graphql-axum = "7.0.1"
axum = { version = "0.7.4", features = ["tracing"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-server = { version = "0.6.0" }
chrono = { version = "0.4.33", features = ["serde"] }
config = { version = "0.13.4", features = ["toml"] }
csv = "1.3.0"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json", "numeric"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
jsonwebtoken-google = "0.1.6"
passwords = "3.1.16"
r2d2 = "0.8.10"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio-comp"] }
reqwest = { version = "0.11.22", features = ["json", "native-tls"] }
rust_decimal = { version = "1.34.2", features = ["db-diesel2-postgres", "diesel2"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-aux = "4.2.0"
serde-enum-str = "0.4.0"
serde_json = "1.0.96"
thiserror = "1.0.49"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat", "futures-util"] }
tower-http = { version = "0.5.1", features = ["fs","cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
